New Years Eve version update

--- a/ngWerewolf.css
+++ b/ngWerewolf.css
@@ -27,8 +27,8 @@ body {
 }
 
 #title {
-	color: orange;
-	font-family:'Butcherman';
+	color: silver;
+	font-family:'Bungee Outline';
 	font-size: 64px;
 	display: block;
 	text-align: center;
